# Semantic-RTS

./: .gitignore  ACCURACY_IMPROVEMENTS.md  ALGORITHM_SPEC.md  IMPLEMENTATION_PLAN_v1.md
semantic-rts/: .env.example  .gitignore  pyproject.toml  run_ablations.py
semantic-rts/config/: default.yaml  projects.yaml
semantic-rts/config/ablations/: no_bm25.yaml  no_bridge.yaml  no_llm.yaml  no_micro_bypass.yaml  no_negative_pass.yaml  no_sensitivity.yaml  no_tier.yaml  no_token_overlap.yaml  no_topology.yaml  semantic_only.yaml  with_cross_encoder.yaml
semantic-rts/docs/: cmds.md
semantic-rts/scripts/: build_d4j_final_fixed_test_counts.py  run_eval_full.sh  run_eval_smoke.sh  run_phase1_chart.sh  setup_defects4j.sh
semantic-rts/src/semantic_rts/: __init__.py  cli.py  config.py
semantic-rts/src/semantic_rts/baselines/: __init__.py  retest_all.py  starts_runner.py
semantic-rts/src/semantic_rts/defects4j/: __init__.py  checkout.py  diff_extractor.py  ground_truth.py
semantic-rts/src/semantic_rts/eval/: __init__.py  baselines.py  defects4j.py  metrics.py  report.py  runner.py
semantic-rts/src/semantic_rts/impact/: __init__.py  diff_parser.py  intent_agent.py  retriever.py
semantic-rts/src/semantic_rts/kb/: __init__.py  builder.py  embed_format.py  sensitivity.py  (+5 more)
semantic-rts/tests/: conftest.py
semantic-rts/tests/integration/: test_llm_live.py
semantic-rts/tests/unit/: test_baselines.py  test_config.py  test_defects4j.py  test_impact.py  test_kb_builder.py  test_kb_parser.py  test_llm_unit.py  test_runner.py  test_selector.py  test_tier_classifier.py
(+16 files in other folders)
