[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-rts"
version = "0.1.0"
description = "Semantic-Aware Regression Test Selection Using LLMs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "google-generativeai>=0.8",
    "faiss-cpu>=1.9",
    "numpy>=1.26",
    "unidiff>=0.7",
    "javalang>=0.13",
    "tqdm>=4.66",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "rank-bm25>=0.2",
]

[project.scripts]
srts = "semantic_rts.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_rts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
